--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             <button class="nav-btn">NEED HELP</button>
             <ion-icon class="notifications" name="notifications-outline">
             </ion-icon>
-            <img src="img4.webp" alt="User's profile" class="nav-img" />
+            <img src="imgs/img4.webp" alt="User's profile" class="nav-img" />
           </div>
         </div>
         <div class="profile">
           <div class="details">
-            <img src="img4.webp" alt="User's profile " class="profile-pic" />
+            <img src="imgs/img4.webp" alt="User's profile " class="profile-pic" />
             <div class="sub-profile">
               <div class="name">
                 <h2 class="greet">Hi, Emma good morning 👋</h2>
@@ -72,21 +72,21 @@
         </div>
         <p class="headings">COVERED PERSONS</p>
         <div class="covered">
-          <img src="img1.webp" alt="User1" class="covered1">
-          <img src="img2.webp" alt="User2" class="covered1">
+          <img src="imgs/img1.webp" alt="User1" class="covered1">
+          <img src="imgs/img2.webp" alt="User2" class="covered1">
         </div>
         <p class="headings">BENEFICIARY PERSONS</p>
         <div class="beneficiary">
-          <img src="img3.webp" alt="User3" class="bene1">
-          <img src="img5.webp" alt="User4" class="bene1">
-          <img src="img6.webp" alt="User5" class="bene1">
+          <img src="imgs/img3.webp" alt="User3" class="bene1">
+          <img src="imgs/img5.webp" alt="User4" class="bene1">
+          <img src="imgs/img6.webp" alt="User5" class="bene1">
         </div>
         <p class="headings">EMERGENCY PERSONS</p>
         <div class="emergency">
-          <img src="img6.webp" alt="User6" class="emergency1"/>
-          <img src="img7.webp" alt="User7" class="emergency1"/>
-          <img src="img8.webp" alt="User8" class="emergency1"/>
-          <img src="img4.webp" alt="User4" class="emergency1"/>
+          <img src="imgs/img6.webp" alt="User6" class="emergency1"/>
+          <img src="imgs/img7.webp" alt="User7" class="emergency1"/>
+          <img src="imgs/img8.webp" alt="User8" class="emergency1"/>
+          <img src="imgs/img4.webp" alt="User4" class="emergency1"/>
         </div>
         <div class="about-me">
           <p class="fam">ABOUT ME</p>
@@ -130,9 +130,9 @@
                 <div class="flex-display">
                   <p class="test-text">NEW CLAIMS</p>
                  <div class="flex">
-                    <img src="img1.webp" alt="User"   class="claims">
-                   <img src="img2.webp" alt="User"   class="claims">
-                   <img src="img3.webp" alt="User" class="claims">
+                    <img src="imgs/img1.webp" alt="User"   class="claims">
+                   <img src="imgs/img2.webp" alt="User"   class="claims">
+                   <img src="imgs/img3.webp" alt="User" class="claims">
                    <button class="num1">+32</button>
                   </div>
                 </div>
@@ -142,9 +142,9 @@
                 <div class="flex-display">
                   <p class="test-text">NEW MEMBERS</p>
                  <div class="flex">
-                   <img src="img5.webp" alt="User"  class="claims">
-                   <img src="img6.webp" alt="User" class="claims">
-                   <img src="img7.webp" alt="User" class="claims">
+                   <img src="imgs/img5.webp" alt="User"  class="claims">
+                   <img src="imgs/img6.webp" alt="User" class="claims">
+                   <img src="imgs/img7.webp" alt="User" class="claims">
                    <button class="num1">+32</button>
                   </div>
                 </div>
@@ -154,9 +154,9 @@
                 <div class="flex-display">
                   <p class="test-text">TOTAL CLAIMS</p>
                   <div class="flex">
-                   <img src="img9.webp" alt="User"  class="claims">
-                    <img src="img10.webp" alt="User" class="claims">
-                    <img src="img11.webp" alt="User" class="claims">
+                   <img src="imgs/img9.webp" alt="User"  class="claims">
+                    <img src="imgs/img10.webp" alt="User" class="claims">
+                    <img src="imgs/img11.webp" alt="User" class="claims">
                     <button class="num1">+32</button>
                   </div>
                 </div>
@@ -165,7 +165,7 @@
             <section class="members">
               <div class="member">
                 <div class="member1">
-                  <img src="img11.webp" alt="Amelia Kimani" class="member-img"/>
+                  <img src="imgs/img11.webp" alt="Amelia Kimani" class="member-img"/>
                   <div class="member-details">
                     <p class="member-name">AMELIA KIMANI</p>
                     <div class="detail-1"><ion-icon class="folder" name="folder-outline"></ion-icon><p class="detail-text"><strong>Filed</strong>:- &nbsp;&nbsp;Thu, Jul 10, 2018 7:30 PM EDT</p></div>
@@ -175,7 +175,7 @@
                   </div>
                 </div>
                 <div class="member1">
-                  <img src="img9.webp" alt="Genevieve Juma" class="member-img"/>
+                  <img src="imgs/img9.webp" alt="Genevieve Juma" class="member-img"/>
                   <div class="member-details">
                     <p class="member-name">GENEVIEVE JUMA</p>
                     <div class="detail-1"><ion-icon class="folder" name="folder-outline"></ion-icon><p class="detail-text"><strong>Filed</strong>:- &nbsp;&nbsp;Thu, Jul 10, 2018 7:30 PM EDT</p></div>
@@ -185,7 +185,7 @@
                   </div>
                 </div>
                 <div class="member1">
-                  <img src="img8.webp" alt="Theodore Wachira" class="member-img"/>
+                  <img src="imgs/img8.webp" alt="Theodore Wachira" class="member-img"/>
                   <div class="member-details">
                     <p class="member-name">THEODORE WACHIRA</p>
                     <div class="detail-1"><ion-icon class="folder" name="folder-outline"></ion-icon><p class="detail-text"><strong>Filed</strong>:- &nbsp;&nbsp;Thu, Jul 10, 2018 7:30 PM EDT</p></div>
