--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             <div class="sub-profile">
               <div class="name">
                 <h2 class="greet">Hi, Emma good morning 👋</h2>
-                <p class="email">Email:- akp.emma237@gmail.com</p>
-                <p class="pno">Phone:- +91 88937584843</p>
+                <p class="email">Email:-<strong> akp.emma237@gmail.com</strong></p>
+                <p class="pno">Phone:- <strong>+91 88937584843</strong></p>
                 <p class="address">
-                  Adress:- xyz street 2013,London, NJ 0706 USA
+                  Adress:- <strong>xyz street 2013,London, NJ 0706 USA</strong>
                 </p>
-                <p class="plan">Plan:- <span>$</span>100</p>
-                <p class="date">Joined:- Mon 22nd Feb 2019</p>
+                <p class="plan">Plan:- <strong><span>$</span>100</strong></p>
+                <p class="date">Joined:-<strong> Mon 22nd Feb 2019</strong></p>
               </div>
             </div>
             <div class="progress">
@@ -113,13 +113,13 @@
           <div class="nav">
             <div class="dash">
               <ion-icon class="dash-icon" name="home"></ion-icon>
-              <p class="dash-text">DASHBOARD</p>
+              <a href="#" class="dash-text">DASHBOARD</a>
             </div>
-            <div class="text">NEW CLAIMS</div>
-            <div class="text">COMPLETED CLAIMS</div>
-            <div class="text">PAST CLAIMS</div>
-            <div class="text">MEMBERS</div>
-            <div class="text">MY CLAIMS</div>
+            <a href="#" class="text">NEW CLAIMS</a>
+            <a href="#" class="text">COMPLETED CLAIMS</a>
+            <a href="#" class="text">PAST CLAIMS</a>
+            <a href="#" class="text">MEMBERS</a>
+            <a href="#" class="text">MY CLAIMS</a>
             <button class="claim"><ion-icon class="logo1" name="cash-outline"></ion-icon>CLAIM</button>
           </div>
           <section class="footer">
@@ -199,44 +199,200 @@
 
               <div class="activity">
                 <p class="activity-header">ACTIVITY</p>
-                <div class="activity1">
-                  <div class="flex-activity">
-                   <div class="blue-dot"></div>
-                    <p class="notify">Claimed $2000</p>
-                  </div>
-                   <p class="activity-text">23 members claimed on washington DC</p>
+
+                <div class="inside">
+                  <div class="activity1">
+                    <div class="flex-activity">
+                      <span class="blue-dot"></span>
+                      <p class="notify">Claimed $2000</p>
+                    </div>
+                    <p class="activity-text">23 members claimed on wasington DC</p>
                     <p class="time">05:40 pm</p>
+                  </div>
+
+                  <div class="activity1">
+                    <div class="flex-activity">
+                     <div class="yellow-dot"></div>
+                      <p class="notify">102 New Members</p>
+                    </div>
+                     <p class="activity-text">We have 102 registrations check out their profiles</p>
+                      <p class="time">05:40 pm</p>
+                  </div>
+
+                  <div class="activity1">
+                    <div class="flex-activity">
+                     <div class="green-dot"></div>
+                      <p class="notify">3 Claims are waiting</p>
+                    </div>
+                     <p class="activity-text">Please contribute them, they are waiting for your help</p>
+                      <p class="time">05:40 pm</p>
+                  </div> 
+
+                  <div class="activity1">
+                    <div class="flex-activity">
+                      <span class="blue-dot"></span>
+                      <p class="notify">Claimed $2000</p>
+                    </div>
+                    <p class="activity-text">23 members claimed on wasington DC</p>
+                    <p class="time">05:40 pm</p>
+                  </div>
+
+                  <div class="activity1">
+                    <div class="flex-activity">
+                     <div class="yellow-dot"></div>
+                      <p class="notify">102 New Members</p>
+                    </div>
+                     <p class="activity-text">We have 102 registrations check out their profiles</p>
+                      <p class="time">05:40 pm</p>
+                  </div>
+
+                  <div class="activity1">
+                    <div class="flex-activity">
+                     <div class="green-dot"></div>
+                      <p class="notify">3 Claims are waiting</p>
+                    </div>
+                     <p class="activity-text">Please contribute them, they are waiting for your help</p>
+                      <p class="time">05:40 pm</p>
+                  </div> 
+
+                  <div class="activity1">
+                    <div class="flex-activity">
+                      <span class="blue-dot"></span>
+                      <p class="notify">Claimed $2000</p>
+                    </div>
+                    <p class="activity-text">23 members claimed on wasington DC</p>
+                    <p class="time">05:40 pm</p>
+                  </div>
+
+                  <div class="activity1">
+                    <div class="flex-activity">
+                     <div class="yellow-dot"></div>
+                      <p class="notify">102 New Members</p>
+                    </div>
+                     <p class="activity-text">We have 102 registrations check out their profiles</p>
+                      <p class="time">05:40 pm</p>
+                  </div>
+
+                  <div class="activity1">
+                    <div class="flex-activity">
+                     <div class="green-dot"></div>
+                      <p class="notify">3 Claims are waiting</p>
+                    </div>
+                     <p class="activity-text">Please contribute them, they are waiting for your help</p>
+                      <p class="time">05:40 pm</p>
+                  </div> 
+
+                  <div class="activity1">
+                    <div class="flex-activity">
+                      <span class="blue-dot"></span>
+                      <p class="notify">Claimed $2000</p>
+                    </div>
+                    <p class="activity-text">23 members claimed on wasington DC</p>
+                    <p class="time">05:40 pm</p>
+                  </div>
+
+                  <div class="activity1">
+                    <div class="flex-activity">
+                     <div class="yellow-dot"></div>
+                      <p class="notify">102 New Members</p>
+                    </div>
+                     <p class="activity-text">We have 102 registrations check out their profiles</p>
+                      <p class="time">05:40 pm</p>
+                  </div>
+
+                  <div class="activity1">
+                    <div class="flex-activity">
+                     <div class="green-dot"></div>
+                      <p class="notify">3 Claims are waiting</p>
+                    </div>
+                     <p class="activity-text">Please contribute them, they are waiting for your help</p>
+                      <p class="time">05:40 pm</p>
+                  </div> 
+
+                  <div class="activity1">
+                    <div class="flex-activity">
+                      <span class="blue-dot"></span>
+                      <p class="notify">Claimed $2000</p>
+                    </div>
+                    <p class="activity-text">23 members claimed on wasington DC</p>
+                    <p class="time">05:40 pm</p>
+                  </div>
+
+                  <div class="activity1">
+                    <div class="flex-activity">
+                     <div class="yellow-dot"></div>
+                      <p class="notify">102 New Members</p>
+                    </div>
+                     <p class="activity-text">We have 102 registrations check out their profiles</p>
+                      <p class="time">05:40 pm</p>
+                  </div>
+
+                  <div class="activity1">
+                    <div class="flex-activity">
+                     <div class="green-dot"></div>
+                      <p class="notify">3 Claims are waiting</p>
+                    </div>
+                     <p class="activity-text">Please contribute them, they are waiting for your help</p>
+                      <p class="time">05:40 pm</p>
+                  </div> 
+
+                  <div class="activity1">
+                    <div class="flex-activity">
+                      <span class="blue-dot"></span>
+                      <p class="notify">Claimed $2000</p>
+                    </div>
+                    <p class="activity-text">23 members claimed on wasington DC</p>
+                    <p class="time">05:40 pm</p>
+                  </div>
+
+                  <div class="activity1">
+                    <div class="flex-activity">
+                     <div class="yellow-dot"></div>
+                      <p class="notify">102 New Members</p>
+                    </div>
+                     <p class="activity-text">We have 102 registrations check out their profiles</p>
+                      <p class="time">05:40 pm</p>
+                  </div>
+
+                  <div class="activity1">
+                    <div class="flex-activity">
+                     <div class="green-dot"></div>
+                      <p class="notify">3 Claims are waiting</p>
+                    </div>
+                     <p class="activity-text">Please contribute them, they are waiting for your help</p>
+                      <p class="time">05:40 pm</p>
+                  </div> 
+
+                  <div class="activity1">
+                    <div class="flex-activity">
+                      <span class="blue-dot"></span>
+                      <p class="notify">Claimed $2000</p>
+                    </div>
+                    <p class="activity-text">23 members claimed on wasington DC</p>
+                    <p class="time">05:40 pm</p>
+                  </div>
+
+                  <div class="activity1">
+                    <div class="flex-activity">
+                     <div class="yellow-dot"></div>
+                      <p class="notify">102 New Members</p>
+                    </div>
+                     <p class="activity-text">We have 102 registrations check out their profiles</p>
+                      <p class="time">05:40 pm</p>
+                  </div>
+
+                  <div class="activity1">
+                    <div class="flex-activity">
+                     <div class="green-dot"></div>
+                      <p class="notify">3 Claims are waiting</p>
+                    </div>
+                     <p class="activity-text">Please contribute them, they are waiting for your help</p>
+                      <p class="time">05:40 pm</p>
+                  </div> 
+
+                  
                 </div>
-
-
-                <div class="activity1">
-                  <div class="flex-activity">
-                   <div class="yellow-dot"></div>
-                    <p class="notify">102 New Members</p>
-                  </div>
-                   <p class="activity-text">We have 102 registrations check out their profiles</p>
-                    <p class="time">05:40 pm</p>
-                </div>
-
-
-                <div class="activity1">
-                  <div class="flex-activity">
-                   <div class="green-dot"></div>
-                    <p class="notify">3 Claims are waiting</p>
-                  </div>
-                   <p class="activity-text">Please contribute them, they are waiting for your help</p>
-                    <p class="time">05:40 pm</p>
-                </div>
-
-
-                <div class="activity1">
-                  <div class="flex-activity">
-                   <div class="blue-dot"></div>
-                    <p class="notify">102 New Members</p>
-                  </div>
-                   <p class="activity-text">We have 102 registrations check out their profiles</p>
-                    <p class="time">05:40 pm</p>
-                </div> 
+                
               </div>
             </section>
           </section>
